--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
               <!-- Button or Game Central Box -->
               <div class="box boxButton">
                 <!-- New game/Play Again Button -->
-                <div class="form-group mb-5">
+                <div class="form-group mb-5" id="inputs">
+                  <label>Please Set</label>
+                  <input type="text" class="form-control name" id="player1" value="" placeholder="Player 1 Name">
+                  <input type="text" class="form-control name" id="player2" value="" placeholder="Player 2 Name">
                   <input type="number" class="form-control number" placeholder="Winning Value">
+                  
                 </div>
-                <button type="button" class="btn btn-play"><i class="fa fa-plus-circle mr-2"></i>New Game</button>
+
+                <button type="button" class="btn btn-play"><i class="fa fa-plus-circle mr-2"></i>Start Game</button>
+                
 
                 <!-- Loader Gif Image -->
                 <div class="loadingImage">
